---------------------------------------------------------------------------------------------------
Version: 1.3.3
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.3.2
Date: 2025-04-25
  Changes:
    - New API: excise_effect_from_tech_tree
---------------------------------------------------------------------------------------------------
Version: 1.3.1
Date: 2025-04-21
  Changes:
    - Renamed all the 'magic' fields supported on prototypes to start with 'planetslib_' to make them less cryptic. (The previous names are still supported.)
    - Removed unique planet surface conditions from the documentation for now as their error message is suboptimal.
---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 2025-04-21
  Changes:
    - Added two new APIs: excise_tech_from_tech_tree and excise_recipe_from_tech_tree.
---------------------------------------------------------------------------------------------------
Version: 1.2.20
Date: 2025-04-15
  Changes:
    - The Cargo drop technology effect icon now matches the icon of the planet.
---------------------------------------------------------------------------------------------------
Version: 1.2.19
Date: 2025-04-14
  Changes:
    - Updated Ukrainian localization.
---------------------------------------------------------------------------------------------------
Version: 1.2.18
Date: 2025-04-10
  Changes:
    - Modified PlanetsLib.borrow_music() to allow the copying of music to/from "space-platform."
---------------------------------------------------------------------------------------------------
Version: 1.2.17
Date: 2025-04-03
  Info:
    - Added Space Age tag.
---------------------------------------------------------------------------------------------------
Version: 1.2.16
Date: 2025-03-18
  Changes:
    - Incompatility mark added for MT-lib.