@@ -2,6 +2,7 @@
 Version: 1.3.3
 Date: ????
   Changes:
+    - New API: remove_surface_condition
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.2
 Date: 2025-04-25
